Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1010,12 +1010,12 @@ header {
 
 .nav--open {
   position: fixed;
-  width: 100%;
+  min-width: 100vw;
   height: 100%;
   padding: 8rem 3.4vh 0;
   display: block;
   z-index: 50;
-  background-color: rgba(20, 20, 20, 0.98);
+  background-color: #141414;
 }
 
 @media only screen and (min-width: 1100px) {
